--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,34 @@
-# Byte-compiled / optimized / DLL files
+# General
+tmp/
+bin/
+build/
+dist/
+downloads/
+_trash/
+*~
+*.tmp
+*.bak
+*.swp
+*.log
+
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
-# Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+eggs/
+.eggs/
+*.egg
+*.egg-info/
+develop-eggs/
+.installed.cfg
+
 
 # Unit test / coverage reports
 htmlcov/
@@ -45,45 +41,53 @@ coverage.xml
 *,cover
 .hypothesis/
 
+
 # Translations
 *.mo
 *.pot
 
+
 # Django stuff:
-*.log
 local_settings.py
+
 
 # Flask stuff:
 instance/
 .webassets-cache
 
+
 # Scrapy stuff:
 .scrapy
+
 
 # Sphinx documentation
 docs/_build/
 
+
 # PyBuilder
 target/
+
 
 # IPython Notebook
 .ipynb_checkpoints
 
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# dotenv
-.env
 
 # virtualenv
+.python-version
+.env
+.venv/
+env/
 venv/
 ENV/
 
-# Spyder project settings
-.spyderproject
 
-# Rope project settings
-.ropeproject
+# IDE
+.idea
+.metadata
+*~.nib
+local.properties
+.settings/
+.project
+*.pydevproject
+
+
