--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
-language:
-  - python
+language: python
+python: 2.7
 
-python:
-  - "2.7"
+sudo: required
 
-# command to install dependencies
+# dependencies
 install:
-  - "pip install -r requirements.txt"
+  # pyside
+  - sudo apt-get install -y qt4-qmake libqt4-dev
+  - sudo apt-get install -y python-qt4 python-pyside
 
-# command to run tests
+#pip install pyside --find-links wheelhouse/
+#pip install PySide --no-index --find-links https://parkin.github.io/python-wheelhouse/;
+
+# run tests
 script:
   - pytest tests
